sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:9: error: '(' expected but identifier found.
                        {if plusPetit(i+1,i)
                            ^